<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InsertEditActivity">


    <LinearLayout
        android:id="@+id/activityInsertLl"
        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/activityInsertHintNombre"
            android:hint="@string/introduce_el_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/puesto" />

        <EditText
            android:id="@+id/activityInsertHintPuesto"
            android:hint="@string/introduce_el_puesto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/antiguedad" />

        <EditText
            android:id="@+id/activityInsertHintAntiguedad"
            android:hint="@string/introduce_la_antiguedad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <Button
        android:id="@+id/activityInsertBtGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityInsertLl"
        android:background="@drawable/bt_redondo"
        android:gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="7dp"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/activityInsertBtborrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activityInsertLl"
        android:layout_marginStart="30dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@id/activityInsertBtGuardar"
        android:background="@drawable/bt_redondo"
        android:text="@string/borrar" />
</RelativeLayout>